# AutoXRD

./: .gitignore  TODO.md  hello.py  pyproject.toml
config/: constants.py
data/: CP SBA-15 Flow Low Angle XRD data all.xlsx  citation.md
notebooks/: anats_data.ipynb  eda_basic.ipynb  experimental_data.ipynb  generating_synthetic_data.ipynb  preprocessing.ipynb
utils/: data_handlers.py  data_loaders.py  edx_analysis.py  gen_data.py  gen_synthetic_data.py  grid_handlers.py  plotting.py  preprocessing.py  smooth.py  xrd_analysis.py
