[project]
name = "autoxrd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]
